# ckw

./: README.md  datapackage.json  parse.py  pre_process.py  pyproject.toml
data/ts/: table_batch_0424.md
src/ckw-smartmeter-data/: pre_process.py
