[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ckw-smartmeter-data"
version = "0.1.0"
description = "Data and parser for historical smartmeter data provided by CKW"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "frictionless>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ckw_smartmeter_data = [
    "../datapackage.json",
    "../data/ts/sample/*.csv"
]